@@ -6,5 +6,13 @@
 
 typedef struct {
     int vfoDisplayMode; //0: use Left/Right mouse button, 1: click digit up or down
-
 } guiConfig;
+
+
+typedef struct {
+    int bwidthList;
+    int antList;
+    int rangeList;
+    int tabList;
+    int toneList;
+} guiCommand;
