@@ -3,10 +3,12 @@ CatRadio
 (+ New, * Updated, - Removed)
 
 1.2.0 -
+	+ Clarifier RIT/XIT commands
 	+ Up/Down VFO buttons
 	+ Repeater shift offset
 	+ DCS code and squelch
 	+ COM port list in the communication config dialog
+	* Bug correction: IF shift slider now correctly updated
 
 1.1.1 -	2022-03-19
 	* VFO operations: check rig caps before perform VFO operations
